# test-matsuzawa-20251218

./: pyproject.toml
.research/: research_history.json
.research/results/: comparative-1-resnet56-cifar10_config.yaml  proposed-resnet56-cifar10_config.yaml  stderr.txt  stdout.txt
.research/results/comparative-1-resnet56-cifar10/metrics/: metrics.json
.research/results/proposed-resnet56-cifar10/metrics/: metrics.json
config/: config.yaml
config/runs/: comparative-1-resnet56-cifar10.yaml  proposed-resnet56-cifar10.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
